# membra-l3-cpp

./: CMakeLists.txt  README.md  membra_l3  test_compute_staking  test_reward_vault
include/: compute_benchmark.hpp  compute_futures.hpp  compute_staking.hpp  crypto.hpp  gas_reimbursement.hpp  gas_vault.hpp  intent_network.hpp  ipfs_verifier.hpp  llm_mempool_governor.hpp  merkle_provenance.hpp  proof_book.hpp  proof_of_inference.hpp  receiver_paid_gas.hpp  reward_vault.hpp  volatility_oracle.hpp  zero_balance_preservation.hpp  zk_compute.hpp
src/: crypto.cpp  gas_reimbursement.cpp  ipfs_verifier.cpp  llm_mempool_governor.cpp  main.cpp  merkle_provenance.cpp  zero_balance_preservation.cpp  zk_compute.cpp
tests/: test_compute_staking.cpp  test_gas_reimbursement.cpp  test_gas_vault.cpp  test_ipfs_verifier.cpp  test_llm_mempool_governor.cpp  test_merkle_provenance.cpp  test_reward_vault.cpp  test_zero_balance_preservation.cpp  test_zk_compute.cpp
